--- a/style.css
+++ b/style.css
@@ -25,31 +25,31 @@ i{
 {
   0%
   {
-      transform: translateY(-100%);
+    transform: translateY(-100%);
   }
   100%
   {
-      transform: translateY(500%);
+    transform: translateY(500%);
   }
 }
 
 .container{
-    color: rgb(255,255,255);
-    text-align: center;
+  color: rgb(255,255,255);
+  font-size: 1.7vw;
+  text-align: center;
 }
 
 .launch-time {
-    display: flex;
-    margin-left:auto;
-    margin-right:auto;
-    width:25%;
+  display: flex;
+  margin-left: auto;
+  margin-right: auto;
+  width: 35%;
 }
 .launch-time div{
-    flex-basis: 50%;
+  flex-basis: 30%;
 }
 
 .launch-time div p{
-    font-size: 60px;
-    margin-bottom: 5%;
+  margin-bottom: 1%;
 }
 
